--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
         <div id="principal">
 
-            <h1>Hola guapos de el mundo</h1>
+            <h1>Hola María Henríquez</h1>
 
         </div>
 
@@ -154,4 +154,5 @@
     </footer>
 
 </body>
+
 </html>
